# Kokoros

.cargo/: config.toml
.github/workflows/: cross-platform.yml
docs/: windows-msvc.md
kokoros/: Cargo.toml  build.rs
kokoros/src/onn/: mod.rs  ort_base.rs  ort_runtime.rs
