[package]
name = "kokoros"
version = "0.1.0"
edition = "2024"

[dependencies]
espeak-rs = "0.1.9"
hound = "3.5.1"
indicatif = "0.17.11"
ndarray = "0.16.1"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.19" }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["fs", "io-util"] }
ndarray-npy = "0.9.1"
mp3lame-encoder = "0.2.1"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
opus = "0.3"
ogg = "0.9"

# Base ORT features shared across all platforms.
# `std`, `ndarray`, and `tracing` are always enabled; platform-specific
# sections below layer additional features on top.
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "tracing"] }

# Windows: use load-dynamic so onnxruntime.dll is loaded at runtime.
# This avoids CRT conflicts between a statically-linked Rust binary (/MT)
# and a prebuilt ORT library that may use a different runtime.
# `ort-sys/disable-linking` (implied by load-dynamic) skips all static linkage.
# `default-features = false` prevents `download-binaries` from being activated.
[target.'cfg(windows)'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"], default-features = false }

# Linux / macOS: let ORT auto-download prebuilt binaries as before.
[target.'cfg(not(windows))'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "copy-dylibs", "tls-native"] }

[build-dependencies]
# pkg-config is used on Linux/macOS to locate sonic and pcaudio.
pkg-config = "0.3"
# vcpkg is used on Windows for any additional native deps (e.g. sonic, pcaudio).
vcpkg = "0.2"

[features]
default = ["cpu"]
cpu = []
# cuda: enable the CUDA execution provider.
# On Linux/macOS this links the CUDA-enabled ORT.
# On Windows with load-dynamic, CUDA support is determined by which
# onnxruntime.dll is placed next to the executable at runtime.
cuda = ["ort/cuda"]
